--- a/www/src/styles/components/buttons.scss
+++ b/www/src/styles/components/buttons.scss
@@ -2,7 +2,6 @@
   $size: 1.1rem;
 
   width: $size;
-  height: $size;
 }
 
 .btn-svg {
